fix(client): collapsing reflex containers. (#35247)

--- a/client/src/templates/Challenges/classic/classic.css
+++ b/client/src/templates/Challenges/classic/classic.css
@@ -2,10 +2,6 @@
   overflow: hidden !important;
 }
 
-.desktop-layout {
-  height: calc(100vh - var(--header-height));
-}
-
 .monaco-menu .action-label {
   color: #a2bd9b;
   letter-spacing: 0.02em;
